database connected to atlas

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 DATABASE = mongodb://localhost:27017/projectdb
 TOKEN_KEY = edhi
+mongoURL = mongodb+srv://onlinepizza:pass1978@newcluster.seun8.mongodb.net/onlinepizza
