--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "project",
+  "name": "online-pizza",
   "version": "1.0.0",
-  "description": "",
+  "description": "Online Pizza Store using MERN Stack.",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Ahmed Edhi",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.3.1",
-    "express-jwt": "^6.1.1",
-    "express-validator": "^6.2.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "express-jwt": "^7.7.2",
+    "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
     "nodemon": "^2.0.15",
-    "npm": "^6.13.0",
+    "npm": "^8.10.0",
     "uuid": "^3.3.3"
   }
 }
