--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,17 @@
     "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-fileupload": "^1.4.0",
     "express-jwt": "^7.7.2",
     "express-validator": "^6.14.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.7",
     "nodemon": "^2.0.15",
     "npm": "^8.10.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.16",
+    "nodemailer": "^6.4.16",
+    "validator": "^13.1.17"
   }
 }
